--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <title>CSS GRID PROV</title>
 </head>
 <body>
-    <!-- Denna fil skall alltid heta index.html och är den första filen på en hemsida --- nytt test -->
+    <div class="Gridwrapper">   
+        <header class="header">header</header>
+        <article class="article1">article</article>
+        <article class="article2">article</article>
+        <article class="article3">article</article>
+        <article class="article4">article</article>
+        <article class="article5">article</article>
+        <aside class="aside">aside</aside>
+        <footer class="footer">footer</footer>
+    </div>
 
 <script src="js/script.js"></script>
 </body>
